# Herbie-Fully-Loaded

./: Example_epw.csv  LICENSE  README.md  TODO  TODO.md  assumptions.md  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ARCHIVE/: core.py  pyproject.toml  utils.py
assets/: amy_data_sanantonio_2022.csv
gnomy/: constants.py  core.py  utils.py
notebooks/: intermediate_calculations.ipynb  quickstart.ipynb  solar_statistics.ipynb  wind_direction_speed.ipynb
notebooks/scratch/: 0_get_data.py  2022010100.csv  2023.07.31 - amy trial.ipynb  2023.08.03 - Herbie Speedup.ipynb  2023.08.08 -  Wind Directions.ipynb  2023.08.08 - AMY Creation.ipynb  2023.08.08 - combine csvs.ipynb  amy testing.ipynb  common.py  herbie testing.ipynb
